--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYauD0EBDnTQQlGhvaoLUL",
+      "authorship_tag": "ABX9TyMx9BCvdL3fYLqhgypkFr4x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,6 +249,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Если p-значение меньше 0.05, это означает, что есть статистически значимые различия между группами. Если p-значение больше 0.05, это означает, что статистически значимых различий между группами нет."
+      ],
+      "metadata": {
+        "id": "ddRLGHkNEtyF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "5) Заявляется, что партия изготавливается со средним арифметическим 2,5 см. Проверить данную гипотезу, если известно, что размеры изделий подчинены нормальному закону распределения. Объем выборки 10, уровень статистической значимости 5%\n",
         "\n",
         "2.51, 2.35, 2.74, 2.56, 2.40, 2.36, 2.65, 2.7, 2.67, 2.34"
@@ -256,6 +265,50 @@
       "metadata": {
         "id": "lb5Uac23kVfg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import scipy.stats as stats\n",
+        "\n",
+        "# Данные\n",
+        "data = [2.51, 2.35, 2.74, 2.56, 2.40, 2.36, 2.65, 2.7, 2.67, 2.34]\n",
+        "\n",
+        "# Параметры гипотезы\n",
+        "mu_0 = 2.5  # заявленное среднее\n",
+        "\n",
+        "# Вычисление t-статистики и p-значения\n",
+        "t_stat, p_value = stats.ttest_1samp(data, mu_0)\n",
+        "\n",
+        "# Вычисление критического значения t для двустороннего теста\n",
+        "alpha = 0.05\n",
+        "df = len(data) - 1  # степени свободы\n",
+        "t_critical = stats.t.ppf(1 - alpha / 2, df)\n",
+        "\n",
+        "print(\"t-статистика:\", t_stat)\n",
+        "print(\"p-значение:\", p_value)\n",
+        "print(\"Критическое значение t:\", t_critical)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BbRJzzcHFJ7L",
+        "outputId": "2e1cf22f-cc44-49aa-e5d7-43c1a2fc85fb"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t-статистика: 0.5630613661802959\n",
+            "p-значение: 0.5871439993940628\n",
+            "Критическое значение t: 2.2621571627409915\n"
+          ]
+        }
+      ]
     }
   ]
 }
